--- a/Contact-Us/contact.css
+++ b/Contact-Us/contact.css
@@ -25,7 +25,7 @@ h6{
 }
 p{
     font: size 12px;
-    color:#465b52;
+    color:#465b52; 
     margin: 15px 0 20px 0;
   
 }
@@ -35,6 +35,23 @@ p{
     font-weight: 200;
     font-family: calibri, Georgia, 'Times New Roman', Times, serif;
 }
+.section-m1{
+    margin: 40px 0;
+}
+
+button.normal{
+    font-size: 14px;
+    font-weight: 600;
+    padding:15px 30px;
+    color:#000;
+    /* background-color: #fff; */
+    border-radius:4px;
+    cursor:pointer;
+    border:none;
+    outline:none;
+    transition:0.2s;
+}
+
 
 body{
     width: 100%;
@@ -44,15 +61,15 @@ body{
     align-items: center;
     justify-content: space-between;
     padding:20px 80px;
-    background-color: #E3E6F3;
-    box-shadow: 0 5px 25px rgba(0,0, 0, 0.06);
+    background-color: #f3e3e7;
+    /* box-shadow: 0 5px 25px rgba(0,0, 0, 0.06); */
     z-index: 999;
     position: sticky;
     top:0;
     left:0;
-
-    
 }
+
+/* Nav Bar */
 #navbar{
     display: flex;
     align-items: center;
@@ -69,13 +86,14 @@ body{
     text-decoration: none;
     font-size: 20px;
     font-weight: 600;
-    color: #1a1a1a;
+    color: #ffffff;
     transition: 0.03s;
 
 }
 #navbar li a:hover,
 #navbar li a.active{
     color: #088178;
+    /* #1788aa */
 
 }
 
@@ -99,6 +117,8 @@ left: 20px;
 }
 #close{
     display: none;
+
+/* Footer */
 }
 footer{
 
@@ -161,84 +181,115 @@ footer .copyright{
    text-align:center;
 }
 
-/* shop-page */
-#page-header{
-    background-image: url(IMG/banner/b1.jpg
-    );
-    width: 100%;
-    height: 40vh;
-    background-size: cover;
+
+/* contact page */
+#contact-details{
     display: flex;
-    justify-content: center;
-    text-align: center;
-    flex-direction: column;
-    padding: 14px;
-
-
-
+    align-items: center;
+    justify-content: space-between;
 }
-#page-header h2,
-#page-header p{
-color: #fff;
+#contact-details .details{
+    width: 40%;
+    
 }
 
-
- #page-header.about-header{
-    background-image: url("IMG/ABOUT/banner.png");
+#contact-details .details span{
+    font-size: 25px;
+    font-weight: 700;
+    color: #2db4ab;
     
- }
- #about-head{
-    
-    display: flex;
-    background-color: #e5eeed;
-    
-
 }
-#about-head img{
+#contact-details .details h2{
+    font-size: 30px;
+    line-height: 35px;
+    padding: 20px 0;
     
-    width:40%;
-    height: 500px;
-    padding:  30px 50px;
-    
-
- }
- #about-head .about1{
-    
-    padding: 30px 50px;
-   }
-   #about-head p{
-    
+}
+#contact-details .details h3{
     font-size: 20px;
-    color: #0f1212;
-    font-style: italic;
-    align-items: justify;
+   padding-bottom: 15px;
     
-   }
-
-.about1 marquee{
-    margin-top: 20px;
-    background-color: #7fa6f5;
-    font-size: 20px;
+}
+#contact-details .details p{
     font-weight: 400;
-    color: #fff;
-}   
-#about-app{
-    text-align: center;
+    font-family:'Times New Roman', Times, serif;
+    padding: 15px;
+    
+    
 }
-#about-app .video{
-    width: 70%;
-    height: 50%;
-    margin: 30px auto 0 auto;
-}
-#about-app .video video{
-    width: 80%;
-    height: 50%;
-    margin-top: 20px;
-    border-radius: 20px;
+#contact-details .details li {
+    list-style: none;
+    display: flex;
+    padding: 5px 0;
+ 
+    
 }
 
+#contact-details .details li  i{
+   font-size: 14px;
+   padding-right: 12px;
+    
+}
+#contact-details .details li  p{
+    margin: 0;
+    font-size: 24px;
    
-/* Media Query */
+     
+ }
+
+#contact-details .map{
+   
+   width: 55%;
+   height: 500px;
+   cursor: pointer;
+   
+    
+}
+#contact-details .map iframe{
+   
+    width: 100%;
+    height: 100%;
+    
+     
+ }
+
+
+#form-details span{
+    font-size: 22px;
+    font-weight: 700;
+    color:#136862;
+}
+
+#form-details form h2{
+    font-size:26px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    line-height: 35px;
+    padding: 20px 0;
+}
+
+#form-details form{
+    width: 55%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 60px;
+
+
+}
+#form-details form input,
+#form-details form textarea{
+    width: 100%;
+    padding: 12px 15px;
+    outline:none;
+    margin-bottom: 20px;
+    border:1px  solid #e1e1e1;
+}
+#form-details form button{
+    background-color: #1788aa;
+    color: #fff;
+    font-size: 15px;
+    font-weight:700;
+}
 
 @media (max-width:1000px){
     .section-p1 {
@@ -255,7 +306,7 @@ color: #fff;
         right:-300px;
         height:100vh;
         width:300px;
-        background-color: #E3E6F3;
+        background-color: #f3e3ea;
         box-shadow:0 40px 60px rgba(0,0,0,0.1);
         padding:80px 0 0 10px;
 
@@ -276,14 +327,28 @@ color: #fff;
         font-size: 24px;
         padding-left:20px;
     }
-   
+    #close{
+        display: initial;
+        position:absolute;
+        top:30px;
+        left:30px;
+        color:#222;
+        font-size:24px;
+
+    }
+
+    #lg-bag{
+
+        display:none;
+    }
+
     /* about page */
     .section-p1 {
         padding: 40px 40px;
         
     }
     
-   
+
     #page-header {
         background-image: url(IMG/banner/b1.jpg
         );
@@ -292,41 +357,10 @@ color: #fff;
        
     }
 
-    #about-head{
-        flex-direction: column;
-    }
-    #about-head img {
-        width: 100%;
-        height: 50vh;
-        padding: 30px 50px;
-    }
-    #about-head .about1 {
-        padding: 0px 10px;
-        
-    }
-    #about-head .about1  p{
-        padding: 0px 10px;
-        font-size: 25px;
-        
-    }
-    #about-head .about1 abbr{
-        padding: 0px 10px;
-        font-size: 25px;
-        
-    }
-    .about1 marquee {
-        margin-top: 30px;
-        background-color: #928383;
-        font-size: 30px;
-        font-weight: 500;
-    }
     #page-header{
         height: 40%;
     }
-    #cart{
-        overflow-x: auto;
-    }
-    
+        
 } 
 
 @media (max-width: 477px){
@@ -343,45 +377,49 @@ color: #fff;
       
         position: sticky;
         top:0;
-    }
 
+       
+    }
+    
     h2 {
         font-size: 45px;
     }
-   
     
     p {
         font: size 20px;
         color: #131314;
         margin: 15px 0 20px 0;
     }
-
-    #sm-banner {
-        display: flex;
-        justify-content:space-between;
-        
-        
-    }
-    button.white {
-       
-        padding: 7px 18px;
-       
-    }
     
-    #sm-banner .banner-box1 {
-        margin-top: 20px;
-    }
-    
-    #banner3 .banner-box2 {
-        width: 20%;
-      
-    }
 
         #page-header{
             width: 100%;
             height: 100%;
         }
-        
+        #contact-details {
+            flex-direction: column;
+            
+        }
+        #contact-details .details {
+          width: 100%;
+          height: 100%;
+          padding: 10px 0;
+   
+        }
+        #contact-details .details  p{
+            margin: 0;
+           font-size: 12px;
+     
+        }
+        #contact-details .map{
+           width: 100%;
+           height: 100%;
+        }
+        #form-details{
+            width: 130%;
+           
+           
+        }
         footer .col {
             font-size: 10px;
 
@@ -394,5 +432,5 @@ color: #fff;
         footer .follow{
             font-size: 20px;
         }
-           
+   
 }
